--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.26.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "gh-pages": "^6.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -32,7 +33,6 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "sass-embedded": "^1.77.8",
     "vite": "^5.4.1"
